[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epubcat"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "zamubafoo", email = "106848396+zamu-flowerpot@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["ebooklib", "ftfy", "lxml", "cssselect"]

[project.urls]
Documentation = "https://github.com/zamu-flowerpot/epubcat#readme"
Issues = "https://github.com/zamu-flowerpot/epubcat/issues"
Source = "https://github.com/zamu-flowerpot/epubcat"

[project.scripts]
epubcat = "epubcat.__main__:main"

[tool.hatch.version]
path = "epubcat/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:epubcat tests}"

[tool.coverage.run]
source_pkgs = ["epubcat", "tests"]
branch = true
parallel = true
omit = [
  "epubcat/__about__.py",
]

[tool.coverage.paths]
epubcat = ["epubcat", "*/epubcat/epubcat"]
tests = ["tests", "*/epubcat/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
